welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue: error: not found: value indexOfValue
   t.setResult( indexOfValue( t.getParameter(0).asInstanceOf[Array[Int]], t.getParameter(1).asInstanceOf[Int]) )
                ^indexOfValue:4: error: not found: value indice
 if (value == nums(i)) { indice = i}	
                         ^