welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
var indexOfValue:Int = 0
for (i<- 0 to nums.length-1) {
 if (value == nums(i)) { indice = i}	
}
return indexOfValue}
